# SonsOfTuring

./: README.md
.github/: copilot-instructions.md
backend/: Dockerfile  README.md  pyproject.toml
backend/databases/: 001_create_tables.sql  002_insert_agents.sql  003_create_users_table.sql
backend/src/: load_env.py  main.py
backend/src/config/database/: cache_manager.py  postgres_manager.py  qdrant_manager.py  redis_manager.py
backend/src/config/monitory/: otel_ai_config.py  otel_config.py
backend/src/controllers/: auth_controller.py  manage_agents.py
backend/src/core/agets/: execute_agent.py  factory_agent.py
backend/src/dependencies/: auth_dependency.py
backend/src/models/dto/agents/: agentLLM.py
backend/src/models/entity/: agent_entity.py  tools_entity.py
backend/src/models/ui/agents/: manage_agents.py
backend/src/models/ui/auth/: auth_schemas.py
backend/src/repository/: agents_repository.py  user_repository.py
backend/src/services/: auth_service.py  manager_agents.py
backend/src/utils/: jwt_utils.py  password_utils.py
backend/tests/: test_auth.py  test_auth_integration.py
runLocal/: README.md  docker-compose.yaml
runLocal/config/: otel-collector-config.yaml
