[project]
name = "SonsOfTuringAPI"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "agno>=2.1.0",
    "anthropic>=0.75.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "google-genai>=1.56.0",
    "groq>=1.0.0",
    "langfuse>=3.11.2",
    "ollama>=0.6.1",
    "openinference-instrumentation-agno>=0.1.25",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-exporter-otlp>=1.37.0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "opentelemetry-instrumentation-logging>=0.58b0",
    "opentelemetry-instrumentation-requests>=0.58b0",
    "opentelemetry-sdk>=1.37.0",
    "python-dotenv>=1.1.1",
    "redis>=7.1.0",
    "uvicorn>=0.35.0",
]
